Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-13334

qrc files are not added to Makefile dependencies in debug_and_release mode

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.14.0 Alpha
    • 4.7.0, 5.3.0, 5.4.0, 5.5.0, 5.6, 5.7, 5.9, 5.10
    • Build tools: qmake
    • None
    • Unix Makefiles
    • ca572a61446ba5cdae523614c874a09347b8e919 97d651711480be05a060b37baa6c86bf75c3df30 (qt/qtbase/wip/qt6)

      When processing a qrc file, qmake does add dependencies to the generated Makefile, such that a change in the resource file will trigger a recompile. However, adding resources later on does not trigger qmake to be re-run, and changes to the new resource files therefore don't trigger a recompile.

      How to reproduce

      • Download attached minimal application
      • Run qmake / make
      • Add file2.txt to qrc file (e.g. by removing the comments)
      • Run make
      • Touch file1.txt
      • Run make
      • qrc_qmaketest.cpp is updated
      • Touch file2.txt
      • Run make
      • qrc_qmaketest.cpp is not updated

        1. Makefile
          49 kB
        2. qmaketest.tgz
          2 kB
        For Gerrit Dashboard: QTBUG-13334
        # Subject Branch Project Status CR V

            jbornema Joerg Bornemann
            kkohne Kai Köhne
            Votes:
            54 Vote for this issue
            Watchers:
            51 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes